--- a/src/assets/markdown.css
+++ b/src/assets/markdown.css
@@ -53,25 +53,38 @@
   color: #777777;
 }
 
-.katex-display {
+.markdown-body .katex {
+  white-space: normal;
+  word-break: break-word;
+}
+
+.markdown-body a {
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+.markdown-body .katex span {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
+.markdown-body .katex-display {
   margin: 0 !important;
   font-size: 16px;
 }
 
-table {
-  border-collapse: collapse;
-  width: 100%;
+.markdown-body table {
   display: block;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   overflow-x: auto;
-  white-space: nowrap;
+  -webkit-overflow-scrolling: touch; /** IOS **/
+  border-collapse: collapse;
 }
 
 .md-table {
   width: 100%;
   max-width: 100%;
-  border-radius: 6px;
-  border: 1px solid #d6d6d6;
   overflow: auto;
 }
 
